# atsawin-trading-cafe

./: .gitignore  README.md  pyproject.toml
docs/: INTEGRATION_CONTRACT.md  PROJECT_CONTEXT.md  SAFE_MT5_BREAKOUT_STRADDLE_EA_BLUEPRINT.md
src/atsawin_trading_cafe/: __init__.py  app.py  cli.py  history_store.py  journal.py  models.py  mt5_contract.py  mt5_live.py  plan_analysis.py  prompts.py  risk.py
tests/: test_history_store.py  test_journal.py  test_mt5_contract.py  test_plan_analysis.py  test_prompts.py  test_risk.py
