[project]
name = "atsawin-trading-cafe"
version = "0.1.0"
description = "Trading Journal / Trading Cafe assistant separated from EA execution layer"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
api = ["fastapi", "uvicorn"]
mt5 = ["MetaTrader5"]
test = []

[project.scripts]
atsawin-trading-cafe-mt5 = "atsawin_trading_cafe.mt5_live:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
